fixed a bunch of UI issues like underlines for links that Jon wanted.  Made better back links at the top.  Wrapped everything in containers so they don't fit the edge of the screen.  Changed show/destroy/back to a button class so they look better.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,5 +25,19 @@ select,
 textarea,
 input[type="number"],
 .uneditable-input {
-  height: 25px;
+  height: 30px;
+}
+
+.fancy-header{
+	text-align: center;
+	color: orangered
+}
+
+.pagination{
+	margin: 20px;
+	text-align: center;
+}
+
+a.cuke_results {
+  text-decoration: underline;
 }
